--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,15 +9,24 @@
     tools:context=".LoginActivity">
 
     <EditText
-        android:id="@+id/edit_text"
+        android:id="@+id/login_text"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text=""/>
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:layout_below="@+id/login_text"/>
 
     <Button
         android:id="@+id/cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:text="Cancel"
         />
 
@@ -26,5 +35,19 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_alignParentBottom="true"
-        android:onClick="onLoginClick"/>
+
+        android:onClick="onLoginClick"
+        android:id="@+id/button" />
+
+    <TextClock
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textClock"
+        android:layout_toStartOf="@+id/cancel_btn"
+        android:layout_marginBottom="90dp"
+        android:layout_above="@+id/login_text"
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button" />
+
+
 </RelativeLayout>
