--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -8,17 +8,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SampleActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Return to home"
-        android:onClick="onReturnHomeClick"
-        />
 
     <Button
+        android:id="@+id/start_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Sample"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+
         android:onClick="onStartSampleClick"/>
 </RelativeLayout>
