--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
-
+<!--
     <Button
+        android:id="@+id/start_sample"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start sample activity"
-        android:layout_centerInParent="true"
-
+        android:visibility="invisible"
         android:onClick="onStartSampleClick"/>
-
+    -->
+    <TextView
+        android:id="@+id/tvTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
+    
+    <RadioGroup
+        android:id="@+id/rgTimeFormat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTime">
+        <RadioButton
+            android:id="@+id/rdShort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/format_short"/>
+        <RadioButton
+            android:id="@+id/rdLong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/format_long"/>
+        </RadioGroup>
+    <Button
+        android:id="@+id/btnGetTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rgTimeFormat"
+        android:onClick="getTimeClick"
+        android:text="@string/get_time"/>
+    <Button
+        android:id="@+id/btnObserver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnGetTime"
+        android:onClick="observerClick"
+        android:text="@string/observer"/>
 </RelativeLayout>
