--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,37 +6,49 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/backColor"
     tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/login_text"
         android:layout_width="match_parent"
-        android:layout_centerInParent="true"
         android:layout_height="wrap_content"
+        android:hint="Login"
         />
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/password_txtv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Password"
         android:inputType="textPassword"
         android:layout_below="@+id/login_text"/>
 
     <Button
-        android:id="@+id/cancel_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="Cancel"
-        />
-
-    <Button
+        android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:layout_alignParentBottom="true"
-
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/password_txtv"
         android:onClick="onLoginClick"
-        android:id="@+id/button" />
+        />
+    <Button
+        android:id="@+id/cancel_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/password_txtv"
+        android:layout_toLeftOf="@id/login_btn"
+        android:text="Cancel"
+        />
+    <LinearLayout
+        android:layout_below="@id/cancel_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onVkAuthClick"
+            android:text="VK"/>
+    </LinearLayout>
 
 </RelativeLayout>
