--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -5,8 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+    <TextView
+        android:id="@+id/txtMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Menushka"/>
     <fragment
         android:name="com.example.vlik1234.tmdb.Fragment1"
+        android:id="@+id/frag1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -17,4 +23,5 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
     </fragment>
+
 </LinearLayout>
