--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -9,15 +9,15 @@
     android:paddingBottom="8dip"
     >
     <ImageView
-        android:id="@android:id/icon"
+        android:id="@+id/poster"
         android:layout_width="54dip"
         android:scaleType="centerCrop"
         android:layout_height="54dip"
         android:layout_marginRight="8dip"/>
 
     <TextView
-        android:id="@android:id/text1"
-        android:layout_toRightOf="@android:id/icon"
+        android:id="@+id/title"
+        android:layout_toRightOf="@id/poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
@@ -25,7 +25,7 @@
         android:id="@android:id/text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@android:id/icon"
+        android:layout_toRightOf="@id/poster"
         android:layout_below="@android:id/text1"
         />
 </RelativeLayout>
