--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -10,9 +10,9 @@
     >
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="54dip"
+        android:layout_width="131dip"
         android:scaleType="centerCrop"
-        android:layout_height="92dip"
+        android:layout_height="185dip"
         android:layout_marginRight="8dip"/>
 
     <TextView
@@ -20,13 +20,15 @@
         android:layout_toRightOf="@id/poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="32sp"
         />
     <TextView
         android:id="@android:id/text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="32sp"
         android:layout_toRightOf="@id/poster"
-        android:layout_below="@android:id/text1"
+        android:layout_below="@android:id/title"
         />
 </RelativeLayout>
 
