--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,32 +6,31 @@
     tools:context="com.example.vlik1234.tmdb.DetailActivity"
 
     android:id="@+id/content"
-
+    android:paddingLeft="16dip"
+    android:paddingRight="16dip"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dip"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/container"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         android:orientation="vertical">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/poster"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"/>
-        </FrameLayout>
-
+        <ImageView
+            android:id="@+id/poster"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="8dip"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/poster"
+        android:layout_toRightOf="@+id/poster"
 
         android:layout_margin="24dp"
         android:textSize="40sp"/>
@@ -39,7 +38,8 @@
         android:id="@+id/overview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title"
+
+        android:layout_below="@id/poster"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginRight="24dp"
@@ -47,7 +47,7 @@
 
         android:textSize="20sp"
         android:lineSpacingMultiplier="1.2"/>
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </ScrollView>
