list with cardview and begin new activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="photo_tint">#7f101010</color>
     <color name="backColor">#F8F8FF</color>
+    <color name="cardview_initial_background">#71C3DE</color>
 </resources>
