--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,11 @@
             android:layout_height="wrap_content"
             android:onClick="onVkAuthClick"
             android:text="VK"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onTestClick"
+            android:text="Test"/>
     </LinearLayout>
 
 </RelativeLayout>
