--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,48 +6,59 @@
     tools:context="com.example.vlik1234.tmdb.DetailActivity"
 
     android:id="@+id/content"
-    android:paddingLeft="16dip"
-    android:paddingRight="16dip"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dip"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primary_text">
+
     <RelativeLayout
     android:id="@+id/container"
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/poster"
-        android:layout_width="wrap_content"
-        android:layout_marginRight="8dip"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"/>
+        <ImageView
+            android:id="@+id/poster"
+            android:contentDescription="@string/poster_content_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:scaleType="centerCrop"/>
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/poster"
+        <TextView
+            style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@id/poster"
+            android:layout_toEndOf="@id/poster"/>
 
-        android:layout_margin="24dp"
-        android:textSize="40sp"/>
-    <TextView
-        android:id="@+id/overview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+            android:id="@+id/genres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_toRightOf="@id/poster"
+            android:layout_toEndOf="@id/poster"
+            android:layout_below="@+id/title"/>
 
-        android:layout_below="@id/poster"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="24dp"
+        <TextView
+            style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+            android:id="@+id/overview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:lineSpacingMultiplier="1.2"
+            android:layout_below="@id/poster"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_below="@id/overview"
+            android:layout_height="1dp"
+            android:background="@color/divider" />
 
-        android:textSize="20sp"
-        android:lineSpacingMultiplier="1.2"/>
     </RelativeLayout>
 
 
