--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -1,27 +1,13 @@
-<!--
-    <ImageView
-        android:id="@+id/poster"
-        android:layout_width="131dip"
-        android:scaleType="centerCrop"
-        android:layout_height="185dip"
-        android:layout_marginRight="8dip"/>
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_toRightOf="@id/poster"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="34sp"
-        />-->
-
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardCornerRadius="16dp"
-        android:layout_margin="8dp">
+        card_view:cardCornerRadius="2dp"
+        android:layout_margin="8dp"
+        >
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -29,7 +15,9 @@
             android:orientation="vertical">
 
         <ImageView
+
             android:id="@+id/poster"
+            android:contentDescription="@string/poster_content_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -40,9 +28,9 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/poster"
             android:layout_toEndOf="@+id/poster"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:textAlignment="center"/>
+            android:textStyle="normal"
+            android:textSize="15sp"
+            android:textColor="@color/primary_text"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
