--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColor">@color/icons</item>
+
     </style>
 
     <style name="Card">
@@ -10,7 +14,6 @@
         <item name="android:layout_height">200dp</item>
         <item name="android:layout_marginBottom">16dp</item>
 
-        <item name="android:elevation">@dimen/card_elevation</item>
         <item name="android:background">@drawable/card_background</item>
     </style>
 
@@ -28,7 +31,6 @@
 
         <item name="android:textColor">#fff</item>
         <item name="android:textSize">28sp</item>
-        <item name="android:fontFamily">sans-serif-light</item>
 
         <item name="android:gravity">bottom|left</item>
         <item name="android:paddingLeft">16dp</item>
