--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -2,6 +2,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
+        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         card_view:cardCornerRadius="2dp"
@@ -15,15 +16,14 @@
             android:orientation="vertical">
 
         <ImageView
-
             android:id="@+id/poster"
             android:contentDescription="@string/poster_content_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <TextView
+            style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
             android:id="@+id/title"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/poster"
