--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,8 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+
     <item android:id="@+id/action_settings"
+        android:icon="@drawable/ic_internet"
         android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
+        android:orderInCategory="2"
+        app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/action_search"
+        android:title="@string/action_settings"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="1"
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
