--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,40 +6,6 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColor">@color/icons</item>
-
+        <item name="android:button">@color/primary</item>
     </style>
-
-    <style name="Card">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">200dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
-
-        <item name="android:background">@drawable/card_background</item>
-    </style>
-
-    <style name="CardPhoto">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-
-        <item name="android:tint">@color/photo_tint</item>
-        <item name="android:scaleType">centerCrop</item>
-    </style>
-
-    <style name="CardTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-
-        <item name="android:textColor">#fff</item>
-        <item name="android:textSize">28sp</item>
-
-        <item name="android:gravity">bottom|left</item>
-        <item name="android:paddingLeft">16dp</item>
-        <item name="android:paddingBottom">8dp</item>
-
-        <item name="android:onClick">showPhoto</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
-        <item name="android:background">?android:selectableItemBackground</item>
-    </style>
-
 </resources>
