--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -7,30 +7,31 @@
         android:layout_height="match_parent"
         card_view:cardCornerRadius="2dp"
         android:layout_margin="8dp"
-        >
-
+        android:background="#80000000">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#80000000">
+            <ImageView
+                android:id="@+id/poster"
+                android:contentDescription="@string/poster_content_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-        <ImageView
-            android:id="@+id/poster"
-            android:contentDescription="@string/poster_content_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <TextView
+                style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="@color/icons"/>
 
-        <TextView
-            style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_toEndOf="@+id/poster"
-            android:textStyle="normal"
-            android:textSize="15sp"
-            android:textColor="@color/primary_text"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
