--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,15 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#80000000">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_containerr"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#80000000">
         <ListView
             android:id="@+id/listr"
-            android:background="@color/divider"
+            android:background="#80000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
