--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -14,6 +14,6 @@
         android:title="@string/search_hint"
         android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="1"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom|withText"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
