--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -15,6 +15,7 @@
             android:background="#80000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="10dp"
             />
     </android.support.v4.widget.SwipeRefreshLayout>
 
