--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -2,8 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-<!--
+    tools:context=".MainActivity"
+    android:background="#80000000">
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_containerr"
         android:layout_width="match_parent"
@@ -14,6 +15,7 @@
             android:background="#80000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="10dp"
             />
     </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -40,5 +42,5 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
--->
+
 </RelativeLayout>
