--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,5 +27,16 @@
             android:layout_below="@+id/vk_auth"
             android:onClick="onNoAuthClick"
             android:text="@string/button_log_noauth"/>
+    <Button
+        android:id="@+id/alpha"
+        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:padding="8dp"
+        android:layout_above="@+id/vk_auth"
+        android:onClick="onAlphaClick"
+        android:visibility="gone"
+        android:text="Alpha"/>
 
 </RelativeLayout>
