--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,23 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#80000000">
+    tools:context=".MainActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#80000000">
+        android:layout_height="match_parent">
         <ListView
             android:id="@+id/list"
-            android:background="#80000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            />
+            android:layout_margin="10dp"/>
     </android.support.v4.widget.SwipeRefreshLayout>
-
     <TextView
         android:id="@+id/empty"
         android:layout_width="wrap_content"
@@ -26,8 +21,6 @@
         android:layout_centerInParent="true"
         android:text="@string/empty_message"
         android:visibility="gone" />
-
-
     <TextView
         android:id="@+id/error"
         android:layout_width="wrap_content"
@@ -35,12 +28,10 @@
         android:layout_centerInParent="true"
         android:text="@string/error_message"
         android:visibility="gone" />
-
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
-
 </RelativeLayout>
