add error for Dialog Fragment and last fix style

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,6 @@
         android:layout_above="@+id/vk_auth"
         android:onClick="onAlphaClick"
         android:visibility="gone"
-        android:text="Alpha"/>
+        android:text="@string/button_alpha"/>
 
 </RelativeLayout>
