--- a/app/src/main/res/layout-port/activity_details.xml
+++ b/app/src/main/res/layout-port/activity_details.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/root"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/backdrop"
+        android:contentDescription="@string/backdrop_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/backdrop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"/>
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop" />
+
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <FrameLayout
             android:id="@+id/frame_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/icons"
-            android:layout_marginTop="200dp"
-            android:layout_marginBottom="120dp"/>
-    </RelativeLayout>
-</ScrollView>
+            android:paddingBottom="120dp"
+            android:paddingTop="150dip"
+            />
+    </ScrollView>
+</RelativeLayout>
