--- a/app/src/main/res/layout/activity_alpha.xml
+++ b/app/src/main/res/layout/activity_alpha.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="64dp">
+        android:text="Click"
+        android:onClick="onButtonClick"/>
 
-        <FrameLayout
-            android:id="@+id/frame_alpha"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="120dp"
-            android:paddingTop="150dip" />
     </RelativeLayout>
-</ScrollView>
