--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
-                android:id="@+id/poster_external"
+                android:id="@+id/poster"
                 android:contentDescription="@string/poster_description"
                 android:scaleType="centerCrop"
                 android:layout_width="92dip"
@@ -26,8 +26,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary_text"
                 android:padding="8dp"
-                android:layout_toRightOf="@+id/poster_external"
-                android:layout_toEndOf="@+id/poster_external"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
                 android:textStyle="bold"
                 android:textSize="15sp"/>
 
@@ -39,8 +39,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_below="@id/title"
-                android:layout_toRightOf="@+id/poster_external"
-                android:layout_toEndOf="@+id/poster_external"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
                 android:textStyle="normal"
                 android:textSize="14sp"/>
             <RatingBar
@@ -50,8 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_below="@id/date"
-                android:layout_toRightOf="@+id/poster_external"
-                android:layout_toEndOf="@+id/poster_external"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
                 android:numStars="10"
                 android:stepSize="0.1"/>
             <TextView
