--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,15 +14,15 @@
             <ImageView
                 android:id="@+id/no_poster"
                 android:contentDescription="@string/no_poster"
-                android:layout_width="162dip"
+                android:layout_width="170dip"
                 android:layout_height="256dip"
                 android:src="@drawable/w342"
                 android:layout_margin="6dp"
                 android:scaleType="centerCrop"/>
             <ImageView
-                android:id="@+id/poster_external"
+                android:id="@+id/poster"
                 android:contentDescription="@string/poster_description"
-                android:layout_width="162dip"
+                android:layout_width="170dip"
                 android:layout_height="256dip"
                 android:layout_margin="6dp"
                 android:scaleType="centerCrop"/>
@@ -33,8 +33,8 @@
                 android:layout_margin="8dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_toRightOf="@id/poster_external"
-                android:layout_toEndOf="@id/poster_external"/>
+                android:layout_toRightOf="@id/poster"
+                android:layout_toEndOf="@id/poster"/>
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
@@ -42,9 +42,12 @@
                 android:textColor="@color/secondary_text"
                 android:textSize="15sp"
                 android:textStyle="normal"
-                android:layout_margin="8dp"
-                android:layout_toRightOf="@id/poster_external"
-                android:layout_toEndOf="@id/poster_external"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_toRightOf="@id/poster"
+                android:layout_toEndOf="@id/poster"
                 android:layout_below="@id/title"/>
 
             <TextView
@@ -52,21 +55,45 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary_text"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:textSize="15sp"
-                android:layout_toRightOf="@id/poster_external"
-                android:layout_toEndOf="@id/poster_external"
+                android:layout_toRightOf="@id/poster"
+                android:layout_toEndOf="@id/poster"
                 android:layout_below="@+id/date"/>
+
+            <TextView
+                android:id="@+id/runtime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="15sp"
+                android:layout_toRightOf="@id/poster"
+                android:layout_toEndOf="@id/poster"
+                android:layout_below="@+id/genres"/>
 
             <TextView
                 android:id="@+id/tagline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:textSize="15sp"
-                android:layout_toRightOf="@id/poster_external"
-                android:layout_toEndOf="@id/poster_external"
-                android:layout_below="@+id/genres"/>
+                android:lineSpacingMultiplier="0.85"
+                android:layout_toRightOf="@id/poster"
+                android:layout_toEndOf="@id/poster"
+                android:layout_below="@+id/runtime"/>
         </RelativeLayout>
     </FrameLayout>
 
