--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,4 +9,8 @@
         android:orderInCategory="1"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
+    <item android:id="@+id/language_setting"
+        android:title="@string/language_setting"
+        android:orderInCategory="2"
+        app:showAsAction="never"/>
 </menu>
