change trailer button

--- a/app/src/main/res/layout/activity_alpha.xml
+++ b/app/src/main/res/layout/activity_alpha.xml
@@ -2,12 +2,35 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <Button
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click"
-        android:onClick="onButtonClick"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:onClick="onButtonClick"
+        android:text="Click" />
 
-    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="170dp"
+        android:layout_height="256dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/w342" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/ic_play_arrow" />
+
+        </RelativeLayout>
+
+
+</RelativeLayout>
