--- a/app/src/main/res/layout/dialog_language_setting.xml
+++ b/app/src/main/res/layout/dialog_language_setting.xml
@@ -7,13 +7,13 @@
     <RadioButton
         android:id="@+id/english"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:padding="8dp"
         android:text="@string/english"/>
     <RadioButton
         android:id="@+id/russian"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:padding="8dp"
         android:text="@string/russian"/>
 </RadioGroup>
