--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,21 +11,37 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/no_poster"
-                android:contentDescription="@string/no_poster"
-                android:layout_width="170dip"
-                android:layout_height="256dip"
-                android:src="@drawable/w342"
-                android:layout_margin="6dp"
-                android:scaleType="centerCrop"/>
-            <ImageView
-                android:id="@+id/poster"
-                android:contentDescription="@string/poster_description"
-                android:layout_width="170dip"
-                android:layout_height="256dip"
-                android:layout_margin="6dp"
-                android:scaleType="centerCrop"/>
+            <RelativeLayout
+                android:id="@+id/poster_container"
+                android:layout_width="170dp"
+                android:layout_height="256dp">
+                <ImageView
+                    android:id="@+id/no_poster"
+                    android:contentDescription="@string/no_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/w342"
+                    android:layout_margin="6dp"
+                    android:scaleType="centerCrop"/>
+                <ImageView
+                    android:id="@+id/poster"
+                    android:contentDescription="@string/poster_description"
+                    android:layout_width="170dip"
+                    android:layout_height="256dip"
+                    android:layout_margin="6dp"
+                    android:scaleType="centerCrop"/>
+
+                <Button
+                    android:id="@+id/trailer_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/ic_play_arrow"
+                    android:onClick="onClick"/>
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
@@ -33,8 +49,8 @@
                 android:layout_margin="8dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_toRightOf="@id/poster"
-                android:layout_toEndOf="@id/poster"/>
+                android:layout_toRightOf="@id/poster_container"
+                android:layout_toEndOf="@id/poster_container"/>
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
@@ -46,8 +62,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_toRightOf="@id/poster"
-                android:layout_toEndOf="@id/poster"
+                android:layout_toRightOf="@id/poster_container"
+                android:layout_toEndOf="@id/poster_container"
                 android:layout_below="@id/title"/>
 
             <TextView
@@ -62,8 +78,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:textSize="15sp"
-                android:layout_toRightOf="@id/poster"
-                android:layout_toEndOf="@id/poster"
+                android:layout_toRightOf="@id/poster_container"
+                android:layout_toEndOf="@id/poster_container"
                 android:layout_below="@+id/date"/>
 
             <TextView
@@ -75,8 +91,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:textSize="15sp"
-                android:layout_toRightOf="@id/poster"
-                android:layout_toEndOf="@id/poster"
+                android:layout_toRightOf="@id/poster_container"
+                android:layout_toEndOf="@id/poster_container"
                 android:layout_below="@+id/genres"/>
 
             <TextView
@@ -91,8 +107,8 @@
                 android:layout_marginBottom="5dp"
                 android:textSize="15sp"
                 android:lineSpacingMultiplier="0.85"
-                android:layout_toRightOf="@id/poster"
-                android:layout_toEndOf="@id/poster"
+                android:layout_toRightOf="@id/poster_container"
+                android:layout_toEndOf="@id/poster_container"
                 android:layout_below="@+id/runtime"/>
         </RelativeLayout>
     </FrameLayout>
@@ -112,13 +128,4 @@
         android:layout_below="@id/overview"
         android:layout_height="1dp"
         android:background="@color/divider" />
-
-   <Button
-       android:id="@+id/trailer_button"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_below="@id/divider"
-       android:layout_marginBottom="32dp"
-       android:text="@string/trailer_button"
-       android:onClick="onClick"/>
 </RelativeLayout>
