--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -1,72 +1,79 @@
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/card_view"
-        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        card_view:cardCornerRadius="2dp"
-        android:layout_margin="16dp">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/cardview_margin"
+    card_view:cardCornerRadius="@dimen/card_corner">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/poster"
+            android:layout_width="@dimen/w185_width"
+            android:layout_height="@dimen/w185_height"
+            android:background="@drawable/w185"
+            android:contentDescription="@string/poster_description"
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/poster"
+            android:layout_toRightOf="@+id/poster"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/poster"
-                android:contentDescription="@string/poster_description"
-                android:scaleType="centerCrop"
-                android:layout_width="92dip"
-                android:layout_height="138dip"
-                android:background="@drawable/w185"
-                />
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/title_adapter_margin"
                 android:textColor="@color/primary_text"
-                android:padding="8dp"
-                android:layout_toRightOf="@+id/poster"
-                android:layout_toEndOf="@+id/poster"
-                android:textStyle="bold"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/date_left_margin"
+                android:layout_marginStart="@dimen/date_right_margin"
                 android:textColor="@color/secondary_text"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_below="@id/title"
-                android:layout_toRightOf="@+id/poster"
-                android:layout_toEndOf="@+id/poster"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
-            <RatingBar
-                android:id="@+id/rating"
-                style="?android:attr/ratingBarStyleSmall"
+                android:textSize="@dimen/date_size"
+                android:textStyle="normal" />
+
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_below="@id/date"
-                android:layout_toRightOf="@+id/poster"
-                android:layout_toEndOf="@+id/poster"
-                android:numStars="10"
-                android:stepSize="0.1"/>
-            <TextView
-                android:id="@+id/rating_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/secondary_text"
-                android:layout_margin="8dp"
-                android:layout_below="@id/date"
-                android:layout_toRightOf="@+id/rating"
-                android:layout_toEndOf="@+id/rating"
-                android:textStyle="normal"
-                android:textSize="12sp"/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                android:layout_margin="@dimen/rating_margin">
+
+                <RatingBar
+                    android:id="@+id/rating"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="10"
+                    android:stepSize="0.1" />
+
+                <TextView
+                    android:id="@+id/rating_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/rating"
+                    android:layout_toRightOf="@id/rating"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/rating_text_size"
+                    android:textStyle="normal" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
 
 
 
