--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,25 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="w342_width">170dp</dimen>
+    <dimen name="w342_height">256dp</dimen>
+    <dimen name="second_text_size">15sp</dimen>
+    <dimen name="trailer_button_width">64dip</dimen>
+    <dimen name="trailer_button_height">42dip</dimen>
+    <dimen name="border_margin">6dp</dimen>
+    <dimen name="space_text_margin">5dp</dimen>
+    <dimen name="left_margin">8dp</dimen>
+    <dimen name="right_margin">6dp</dimen>
+    <dimen name="top_margin">8dp</dimen>
+    <dimen name="title_size">16sp</dimen>
+    <dimen name="w185_width">92dip</dimen>
+    <dimen name="w185_height">138dip</dimen>
+    <dimen name="cardview_margin">16dp</dimen>
+    <dimen name="card_corner">2dp</dimen>
+    <dimen name="title_adapter_margin">8dp</dimen>
+    <dimen name="date_left_margin">8dp</dimen>
+    <dimen name="date_right_margin">8dp</dimen>
+    <dimen name="date_size">14sp</dimen>
+    <dimen name="rating_margin">8dp</dimen>
+    <dimen name="rating_text_size">12sp</dimen>
 </resources>
